--- a/src/main/resources/org/boardgame/boardgamehelper/homepage.fxml
+++ b/src/main/resources/org/boardgame/boardgamehelper/homepage.fxml
@@ -3,39 +3,36 @@
 <?import javafx.scene.Group?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Rectangle?>
-<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="/homepage.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<?import javafx.scene.layout.AnchorPane?>
+<Pane fx:id="headerRoot" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="/homepage.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.boardgame.boardgamehelper.controllers.homepageController">
+   <Rectangle fx:id="headerBox" arcHeight="5.0" arcWidth="5.0" fill="black" height="41.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" styleClass="headerBox" width="607.0" />
+   <Group>
+      <children>
+         <Rectangle fx:id="menuBox" arcHeight="5.0" arcWidth="5.0" fill="#c3c9cf" height="374.0" layoutY="43.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="189.0" />
+         <VBox layoutY="60.0" prefHeight="339.0" prefWidth="176.0">
+            <children>
+               <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Assets" />
+               <Button mnemonicParsing="false" text="View all" />
+               <Button mnemonicParsing="false" text="Add map" />
+               <Button mnemonicParsing="false" text="Add Token" />
+               <Button mnemonicParsing="false" text="Add Sheet" />
+               <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Play" />
+               <Button mnemonicParsing="false" text="launch" />
+               <Button mnemonicParsing="false" text="Join" />
+            </children>
+         </VBox>
+      </children>
+   </Group>
    <children>
-      <Group>
+      <AnchorPane layoutX="400.0" prefHeight="41.0" prefWidth="200.0" styleClass="buttonCon">
          <children>
-            <Rectangle fx:id="header" height="45.0" stroke="BLACK" strokeType="INSIDE" styleClass="header-bg" width="600.0" />
-            <Button fx:id="print" alignment="BASELINE_RIGHT" layoutX="538.0" layoutY="4.0" mnemonicParsing="false" styleClass="header-btn" text="Print" textAlignment="CENTER" />
-            <Text fill="WHITE" layoutX="33.0" layoutY="31.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="header-text" text="Board game helper">
-               <font>
-                  <Font name="Gadugi" size="36.0" />
-               </font>
-            </Text>
+            <Button mnemonicParsing="false" styleClass="headerButton" text="print" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="2.0" AnchorPane.topAnchor="1.0" />
          </children>
-      </Group>
-
-<!--      <Rectangle fill="#dce5ec" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" />-->
-<!--      <ButtonBar>-->
-<!--        <buttons>-->
-<!--            <Button mnemonicParsing="false" text="New asset" />-->
-<!--            <Button mnemonicParsing="false" text="New asset Group" />-->
-<!--          <Button mnemonicParsing="false" text="view assets" />-->
-<!--        </buttons>-->
-<!--      </ButtonBar>-->
-
-<!--      <Group>-->
-<!--         <children>-->
-<!--            <Text strokeType="OUTSIDE"  text="Once launched you can invite others, with the give url edit configuration and act as admin." wrappingWidth="522.9367065429688" />-->
-<!--            <Button mnemonicParsing="false" text="Launch game" />-->
-<!--            <Button mnemonicParsing="false" text="Join game" />-->
-<!--         </children>-->
-<!--      </Group>-->
+      </AnchorPane>
+      <Text layoutX="58.0" layoutY="25.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="header-text" text="Board Game Helper" />
    </children>
 </Pane>
