--- a/src/main/resources/org/boardgame/boardgamehelper/homepage.fxml
+++ b/src/main/resources/org/boardgame/boardgamehelper/homepage.fxml
@@ -12,17 +12,17 @@
    <Rectangle fx:id="headerBox" arcHeight="5.0" arcWidth="5.0" fill="black" height="32" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" styleClass="headerBox" width="607.0" />
    <Group>
       <children>
-         <Rectangle fx:id="menuBox"  arcHeight="5.0" arcWidth="5.0" fill="#c3c9cf" height="374.0" layoutY="43.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="189.0" />
-         <VBox styleClass="menu-box" layoutY="60.0" prefHeight="339.0" prefWidth="176.0">
+         <Rectangle fx:id="menuBox" arcHeight="5.0" arcWidth="5.0" fill="#c3c9cf" height="374.0" layoutY="43.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="189.0" />
+         <VBox layoutY="60.0" prefHeight="339.0" prefWidth="176.0" styleClass="menu-box">
             <children>
-               <Text styleClass="menu-header" strokeType="OUTSIDE" strokeWidth="0.0" text="Assets" />
-               <Button styleClass="menu-button" mnemonicParsing="false" text="View all" />
-               <Button styleClass="menu-button" mnemonicParsing="false" text="Add map" />
-               <Button styleClass="menu-button" mnemonicParsing="false" text="Add Token" />
-               <Button styleClass="menu-button" mnemonicParsing="false" text="Add Sheet" />
-               <Text styleClass="menu-header" strokeType="OUTSIDE" strokeWidth="0.0" text="Play" />
-               <Button styleClass="menu-button" mnemonicParsing="false" text="launch" />
-               <Button styleClass="menu-button" mnemonicParsing="false" text="Join" />
+               <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="menu-header" text="Assets" />
+               <Button fx:id="addButton" mnemonicParsing="false" onMouseClicked="#setScene" styleClass="menu-button" text="View all" />
+               <Button mnemonicParsing="false" styleClass="menu-button" text="Add map" />
+               <Button mnemonicParsing="false" styleClass="menu-button" text="Add Token" />
+               <Button mnemonicParsing="false" styleClass="menu-button" text="Add Sheet" />
+               <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="menu-header" text="Play" />
+               <Button mnemonicParsing="false" styleClass="menu-button" text="launch" />
+               <Button mnemonicParsing="false" styleClass="menu-button" text="Join" />
             </children>
          </VBox>
       </children>
