--- a/src/main/resources/org/boardgame/boardgamehelper/view.fxml
+++ b/src/main/resources/org/boardgame/boardgamehelper/view.fxml
@@ -1,17 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.Group?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Text?>
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="org.boardgame.boardgamehelper.controllers.viewController"
-            prefHeight="400.0" prefWidth="600.0"
-            fx:id="root">
-    <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#B0B0B0" height="341.0" layoutX="19.0" layoutY="43.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="324.0" />
+
+<AnchorPane fx:id="root" prefHeight="400.0" prefWidth="600.0" stylesheets="/view.css, /homepage.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.boardgame.boardgamehelper.controllers.viewController">
+   <ScrollPane prefHeight="493.0" prefWidth="647.0">
+      <content>
+       <AnchorPane fx:id="body" minHeight="0.0" minWidth="0.0" prefHeight="493.0" prefWidth="648.0">
+            <children>
+                <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#B0B0B0" height="448.0" layoutX="21.0" layoutY="46.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="607.0" />
+               <HBox fx:id="Hbody" layoutX="21.0" layoutY="46.0" prefHeight="429.0" prefWidth="607.0" />
+            </children>
+         </AnchorPane>
+      </content>
+   </ScrollPane>
     <Group>
         <Rectangle fx:id="headerBox" arcHeight="5.0" arcWidth="5.0" fill="black" height="32" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" styleClass="headerBox" width="607.0" />
         <AnchorPane layoutX="400.0" prefHeight="41.0" prefWidth="200.0" styleClass="buttonCon">
