added launch screen and outline for saved and new game

--- a/src/main/resources/org/boardgame/boardgamehelper/launch.fxml
+++ b/src/main/resources/org/boardgame/boardgamehelper/launch.fxml
@@ -1,18 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Group?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Line?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.boardgame.boardgamehelper.controllers.launchController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" stylesheets="/homepage.css, /launch.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.boardgame.boardgamehelper.controllers.launchController">
    <children>
-      <HBox layoutX="-1.0" layoutY="67.0" prefHeight="335.0" />
-      <Button layoutX="14.0" layoutY="161.0" mnemonicParsing="false" prefHeight="79.0" prefWidth="159.0" text="New" />
-      <Button layoutX="426.0" layoutY="161.0" mnemonicParsing="false" prefHeight="79.0" prefWidth="159.0" text="Saved" />
-      <Line endX="-99.99998474121094" endY="203.20001220703125" layoutX="400.0" layoutY="119.0" startX="-100.0" />
-      <Text layoutX="199.0" layoutY="63.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Choose previously saved game or create a new game!" textAlignment="CENTER" wrappingWidth="200.0" />
+      <VBox prefHeight="400.0" prefWidth="600.0">
+         <children>
+            <Group>
+               <Rectangle fx:id="headerBox" arcHeight="5.0" arcWidth="5.0" fill="black" height="32" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" styleClass="headerBox" width="607.0" />
+               <AnchorPane layoutX="400.0" prefHeight="41.0" prefWidth="200.0" styleClass="buttonCon">
+                  <children>
+                     <Button fx:id="homeButton" mnemonicParsing="false" onMouseClicked="#pageHandler" styleClass="headerButton" text="Home" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="2.0" AnchorPane.topAnchor="1.0" />
+                  </children>
+               </AnchorPane>
+               <Text layoutX="58.0" layoutY="25.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="header-text" text="Board Game Helper" />
+            </Group>
+            <AnchorPane prefHeight="218.0" prefWidth="600.0">
+               <children>
+                  <Text layoutX="255.0" layoutY="43.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="header" text="Lauch" textAlignment="CENTER" wrappingWidth="89.27890014648438" />
+                  <Text layoutX="200.0" layoutY="70.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="caption" text="Choose previously saved game or create a new game!" textAlignment="CENTER" wrappingWidth="200.0" />
+               </children>
+            </AnchorPane>
+            
+                        <HBox alignment="CENTER" prefHeight="411.0" prefWidth="600.0" spacing="40.0">
+               <children>
+                  <Button fx:id="oldGame" mnemonicParsing="false" onMouseClicked="#pageHandler" prefHeight="79.0" prefWidth="159.0" text="Saved" />
+                  <Line endX="-99.99998474121094" endY="203.20001220703125" startX="-100.0" />
+                  <Button fx:id="newGame" mnemonicParsing="false" onMouseClicked="#pageHandler" prefHeight="79.0" prefWidth="159.0" text="New" />
+               </children>
+            </HBox>
+         </children>
+      </VBox>
    </children>
 </AnchorPane>
