--- a/src/main/resources/org/boardgame/boardgamehelper/launch.fxml
+++ b/src/main/resources/org/boardgame/boardgamehelper/launch.fxml
@@ -6,30 +6,27 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Line?>
-<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" stylesheets="/homepage.css, /launch.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.boardgame.boardgamehelper.controllers.launchController">
+<AnchorPane minWidth="400.0" prefHeight="400.0" prefWidth="600.0" styleClass="root" stylesheets="/homepage.css, /launch.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.boardgame.boardgamehelper.controllers.launchController">
    <children>
-      <VBox prefHeight="400.0" prefWidth="600.0">
+      <VBox minWidth="400.0" prefHeight="400.0" prefWidth="600.0">
          <children>
-            <Group>
-               <Rectangle fx:id="headerBox" arcHeight="5.0" arcWidth="5.0" fill="black" height="32" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" styleClass="headerBox" width="607.0" />
-               <AnchorPane layoutX="400.0" prefHeight="41.0" prefWidth="200.0" styleClass="buttonCon">
+            <Group VBox.vgrow="ALWAYS">
+               <HBox alignment="CENTER_LEFT" prefWidth="4000.0" spacing="40.0" styleClass="header-con">
                   <children>
-                     <Button fx:id="homeButton" mnemonicParsing="false" onMouseClicked="#pageHandler" styleClass="headerButton" text="Home" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="2.0" AnchorPane.topAnchor="1.0" />
+                     <Text layoutX="58.0" layoutY="25.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="header-text" text="Board Game Helper" />
+                     <Button fx:id="homeButton" mnemonicParsing="false" onMouseClicked="#pageHandler" styleClass="headerButton" text="Home" />
                   </children>
-               </AnchorPane>
-               <Text layoutX="58.0" layoutY="25.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="header-text" text="Board Game Helper" />
+               </HBox>
             </Group>
-            <AnchorPane prefHeight="218.0" prefWidth="600.0">
+            <AnchorPane VBox.vgrow="ALWAYS">
                <children>
                   <Text layoutX="255.0" layoutY="43.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="header" text="Lauch" textAlignment="CENTER" wrappingWidth="89.27890014648438" />
                   <Text layoutX="200.0" layoutY="70.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="caption" text="Choose previously saved game or create a new game!" textAlignment="CENTER" wrappingWidth="200.0" />
                </children>
             </AnchorPane>
-            
-                        <HBox alignment="CENTER" prefHeight="411.0" prefWidth="600.0" spacing="40.0">
+            <HBox alignment="CENTER" spacing="40.0" VBox.vgrow="ALWAYS">
                <children>
                   <Button fx:id="oldGame" mnemonicParsing="false" onMouseClicked="#pageHandler" prefHeight="79.0" prefWidth="159.0" text="Saved" />
                   <Line endX="-99.99998474121094" endY="203.20001220703125" startX="-100.0" />
