--- a/src/main/resources/org/boardgame/boardgamehelper/newGame.fxml
+++ b/src/main/resources/org/boardgame/boardgamehelper/newGame.fxml
@@ -1,14 +1,53 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.Group?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="org.boardgame.boardgamehelper.controllers.newGame"
-            prefHeight="400.0" prefWidth="600.0">
-
-</AnchorPane>
+<VBox minWidth="400.0" prefHeight="400.0" prefWidth="600.0" stylesheets="/homepage.css, /newGame.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.boardgame.boardgamehelper.controllers.newGame">
+   <children>
+      <Group VBox.vgrow="ALWAYS">
+         <HBox alignment="CENTER_LEFT" prefHeight="41.0" prefWidth="4000.0" spacing="40.0" styleClass="header-con">
+            <children>
+               <Text layoutX="58.0" layoutY="25.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="header-text" text="Board Game Helper" />
+               <Button fx:id="homeButton" mnemonicParsing="false" onMouseClicked="#pageHandler" styleClass="headerButton" text="Home" />
+            </children>
+         </HBox>
+      </Group>
+      <VBox prefHeight="4000.0" prefWidth="4000.0">
+         <children>
+            <HBox prefHeight="400.0" prefWidth="400.0">
+               <children>
+                  <VBox prefHeight="4000.0" prefWidth="4000.0">
+                     <children>
+                        <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0">
+                           <children>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="caption" text="Maps" />
+                              <HBox prefHeight="100.0" prefWidth="200.0" styleClass="asset-sel" />
+                           </children>
+                        </VBox>
+                        <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0">
+                           <children>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="caption" text="Rules &amp; Player Info" />
+                              <HBox prefHeight="100.0" prefWidth="200.0" styleClass="asset-sel" />
+                           </children>
+                        </VBox>
+                     </children>
+                  </VBox>
+                  <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" styleClass="save-box">
+                     <children>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="asset-caption" text="Asset" />
+                        <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
+                        <Button mnemonicParsing="false" styleClass="saved" text="Save" />
+                     </children>
+                  </VBox>
+               </children>
+            </HBox>
+         </children>
+      </VBox>
+   </children>
+</VBox>
