--- a/src/main/resources/org/boardgame/boardgamehelper/tokenadd.fxml
+++ b/src/main/resources/org/boardgame/boardgamehelper/tokenadd.fxml
@@ -1,28 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.*?>
 <?import javafx.scene.Group?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Text?>
-
 <AnchorPane fx:id="root" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="400.0" prefWidth="600.0" styleClass="root" stylesheets="/homepage.css, /fileadder.css " xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.boardgame.boardgamehelper.controllers.tokenaddController">
     <children>
         <Pane prefHeight="400.0" prefWidth="600.0">
             <children>
                 <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#B0B0B0" height="341.0" layoutX="19.0" layoutY="43.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="324.0" />
-                <Group>
-                    <Rectangle fx:id="headerBox" arcHeight="5.0" arcWidth="5.0" fill="black" height="32" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" styleClass="headerBox" width="607.0" />
-                    <AnchorPane layoutX="400.0" prefHeight="41.0" prefWidth="200.0" styleClass="buttonCon">
+                <Group VBox.vgrow="ALWAYS">
+                    <HBox alignment="CENTER_LEFT" prefHeight="41.0" prefWidth="4000.0" spacing="40.0" styleClass="header-con">
                         <children>
-                            <Button fx:id="homeButton" mnemonicParsing="false" onMouseClicked="#pageHandler" styleClass="headerButton" text="Home" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="2.0" AnchorPane.topAnchor="1.0" />
+                            <Text layoutX="58.0" layoutY="25.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="header-text" text="Board Game Helper" />
+                            <Button fx:id="homeButton" mnemonicParsing="false" onMouseClicked="#pageHandler" styleClass="headerButton" text="Home" />
                         </children>
-                    </AnchorPane>
-                    <Text layoutX="58.0" layoutY="25.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="header-text" text="Board Game Helper" />
+                    </HBox>
                 </Group>
                 <Text layoutX="144.0" layoutY="67.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="page-header" text="Token Creator" wrappingWidth="153.33673095703125" />
                 <VBox fx:id="imageSelector" alignment="CENTER" layoutX="40.0" layoutY="95.0" prefHeight="69.0" prefWidth="224.0">
