--- a/Client/src/main/resources/org/boardgame/boardgamehelper/newGame.fxml
+++ b/Client/src/main/resources/org/boardgame/boardgamehelper/newGame.fxml
@@ -2,13 +2,11 @@
 
 <?import javafx.scene.Group?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<VBox minWidth="400.0" prefHeight="400.0" prefWidth="600.0" stylesheets="/homepage.css, /newGame.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.boardgame.boardgamehelper.controllers.newGame">
+<VBox fx:id="root" minWidth="400.0" prefHeight="400.0" prefWidth="600.0" stylesheets="/homepage.css, /newGame.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.boardgame.boardgamehelper.controllers.newGame">
    <children>
       <Group VBox.vgrow="ALWAYS">
          <HBox alignment="CENTER_LEFT" prefHeight="41.0" prefWidth="4000.0" spacing="40.0" styleClass="header-con">
@@ -26,8 +24,14 @@
                      <children>
                         <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0">
                            <children>
-                              <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="caption" text="Maps" />
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="caption" text="Local Maps" />
                               <HBox fx:id="savedMaps" prefHeight="100.0" prefWidth="200.0" styleClass="asset-sel" />
+                           </children>
+                        </VBox>
+                        <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0">
+                           <children>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="caption" text="Local Tokens" />
+                              <HBox fx:id="savedTokens" prefHeight="100.0" prefWidth="200.0" styleClass="asset-sel" />
                            </children>
                         </VBox>
                         <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0">
@@ -41,7 +45,46 @@
                   <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" styleClass="save-box">
                      <children>
                         <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="asset-caption" text="Asset" />
-                        <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
+                        <VBox prefHeight="200.0" prefWidth="100.0">
+                           <children>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="saved local images" />
+                           </children>
+                        </VBox>
+                        <VBox layoutX="10.0" layoutY="28.0" prefHeight="200.0" prefWidth="100.0">
+                           <children>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="saved local images" />
+                           </children>
+                        </VBox>
+                        <VBox layoutX="10.0" layoutY="184.0" prefHeight="200.0" prefWidth="100.0">
+                           <children>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="saved local images" />
+                           </children>
+                        </VBox>
+                     </children>
+                  </VBox>
+                  <VBox alignment="TOP_CENTER" layoutX="511.0" layoutY="10.0" prefHeight="200.0" prefWidth="100.0" styleClass="save-box">
+                     <children>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="asset-caption" text="Asset" />
+                        <VBox prefHeight="200.0" prefWidth="100.0">
+                           <children>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="saved local map" />
+                           </children>
+                        </VBox>
+                        <VBox layoutX="10.0" layoutY="28.0" prefHeight="200.0" prefWidth="100.0">
+                           <children>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="saved local token" />
+                           </children>
+                        </VBox>
+                        <VBox layoutX="10.0" layoutY="184.0" prefHeight="200.0" prefWidth="100.0">
+                           <children>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Cloud maps" />
+                           </children>
+                        </VBox>
+                        <VBox prefHeight="200.0" prefWidth="100.0">
+                           <children>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Cloud tokens" />
+                           </children>
+                        </VBox>
                         <Button mnemonicParsing="false" styleClass="saved" text="Save" />
                      </children>
                   </VBox>
