--- a/Client/src/main/resources/org/boardgame/boardgamehelper/newGame.fxml
+++ b/Client/src/main/resources/org/boardgame/boardgamehelper/newGame.fxml
@@ -45,48 +45,33 @@
                   </VBox>
                   <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" styleClass="save-box">
                      <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="asset-caption" text="Asset" />
-                        <VBox prefHeight="200.0" prefWidth="100.0">
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="asset-caption" text="Tokens" />
+                        <VBox fx:id="selectedLocalTokens" prefHeight="200.0" prefWidth="100.0">
                            <children>
-                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="saved local images" />
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="local tokens" />
                            </children>
                         </VBox>
-                        <VBox layoutX="10.0" layoutY="28.0" prefHeight="200.0" prefWidth="100.0">
+                        <VBox fx:id="SelectedOnlineTokens" prefHeight="200.0" prefWidth="100.0">
                            <children>
-                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="saved local images" />
-                           </children>
-                        </VBox>
-                        <VBox layoutX="10.0" layoutY="184.0" prefHeight="200.0" prefWidth="100.0">
-                           <children>
-                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="saved local images" />
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="online tokens" />
                            </children>
                         </VBox>
                      </children>
                   </VBox>
                   <VBox alignment="TOP_CENTER" layoutX="511.0" layoutY="10.0" prefHeight="200.0" prefWidth="100.0" styleClass="save-box">
                      <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="asset-caption" text="Asset" />
-                        <VBox prefHeight="200.0" prefWidth="100.0">
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="asset-caption" text="maps" />
+                        <VBox fx:id="selectedLocalMaps" prefHeight="200.0" prefWidth="100.0">
                            <children>
-                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="saved local map" />
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="local maps" />
                            </children>
                         </VBox>
-                        <VBox layoutX="10.0" layoutY="28.0" prefHeight="200.0" prefWidth="100.0">
+                        <VBox fx:id="selectedOnlineMaps" prefHeight="200.0" prefWidth="100.0">
                            <children>
-                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="saved local token" />
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="online maps" />
                            </children>
                         </VBox>
-                        <VBox layoutX="10.0" layoutY="184.0" prefHeight="200.0" prefWidth="100.0">
-                           <children>
-                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Cloud maps" />
-                           </children>
-                        </VBox>
-                        <VBox prefHeight="200.0" prefWidth="100.0">
-                           <children>
-                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Cloud tokens" />
-                           </children>
-                        </VBox>
-                        <VBox >
+                        <VBox>
                            <children>
                         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Save Name" />
                         <TextField fx:id="saveName" text="Save Name" />
